# PexCraft

./: .gitignore  CFONT_MAPPING.md  DEEP_STREAM_BLOCK_DELAY_REPORT.md  FA_IR_COVERAGE_REPORT.md  LEGACY_LANGUAGE_NAMES.md  Makefile  Makefile.linux_sdl2  Makefile.mingw  Makefile.psp  Makefile.wasm  Makefile.win_arm32  PSP1000_MULTIPLAYER_PORT.md  PexCraft-WASM-CI-hotfix-v3.patch  PexCraft-WASM-CI-hotfix.patch  README-text-input-fix.md  README-xbox-uwp-activation-fix-v4.md  README-xbox-uwp-activation-fix-v5.md  README-xbox-uwp-real-boot-fix-v9.md  README-xbox-uwp-user32-keyname-fix-v10.md  README-xbox-uwp-zlib-link-fix-v2.md  README-xbox-uwp-zlib-link-fix-v3.md  README-xbox-uwp-zlib-link-fix.md  README.md  REAL_DEEPER_ROOT_CAUSE_LIGHT_QUEUE_PRELOAD.md  REAL_DEEP_DELAY_ROOT_CAUSE.md  REAL_ROOT_CAUSE_INITIAL_PRELOAD.md  REAL_ROOT_CAUSE_LIGHT_COMMIT_DELAY_REPORT.md  ROOT_CAUSE_STREAM_DELAY_REPORT.md  XBOX_UWP_LAUNCH_ANALYSIS.md  build.bat  build_arm32.bat  build_remote.bat  build_remote_x64.bat  build_wasm.sh  build_x64.bat  log.txt  main.c  main_psp.c  main_wasm.c
.github/scripts/: telegram_build_status.py  telegram_upload_file.py
.github/workflows/: build (copy 1).yml  build-linux-sdl2.yml  build-psp.yml  build-wasm.yml  build.yml  cleaner (copy 1).yml  raknetdll-assets.yml
android/: Makefile.psp  README.md  build.bat  build_remote.bat  build_remote_x64.bat  build_x64.bat  main_lgwebos.c  main_wii.c  settings.gradle
android/android/app/src/main/cpp/: CMakeLists.txt
android/android_tv/: README.md
android/app/: build.gradle
android/docs/: id_texture_audit.txt  worldgen_migration_status.md
android/src/: main_android_tv.c  main_lgwebos.c  main_sdl2.c
android/tools/: prepare_wii_assets.py  worldgen_compare_hashes.py  worldgen_dump.c
android/webos/: CMakeLists.txt
android_tv/: README.md  build_android_tv.sh  prepare_sdl2.sh  settings.gradle
android_tv/app/: build.gradle
android_tv/app/src/main/cpp/: CMakeLists.txt
assets/: Makefile.psp  check_x64_deps.bat  font_default.mcrw  gui_background.mcrw  gui_furnace.mcrw  gui_gui.mcrw  gui_items.mcrw  main_android_tv.c  main_sdl2.c  mob_char.mcrw  pack.mcrw  pack.txt  splashes.txt  terrain.mcrw  unknown_pack.mcrw
assets/android/: README.md
assets/assets/: gui_logo.mcrw  lang_en_US.lang  title_black.mcrw
assets/models/: custom.glb
assets/src/: main.c  main_android_tv.c  main_lgwebos.c  main_psp.c  main_sdl2.c
assets/tools/: extract_lgwebos_icon.py  prepare_psp_assets.py
cmake/: PexBuildInfo.cmake
docs/: ACHIEVEMENTS_STATISTICS_IMPLEMENTATION.md  ANIMAL_JUMP_AND_MENU_MUSIC_FIX.md  JAVA_1_2_5_GAMEPLAY_ACHIEVEMENT_FIXES.md  MINECRAFT_1_2_5_GUI_SCALING_FIX.md  MOB_125_1TO1_SPAWN_AI_REVIEW.md  MOB_125_CLOSER_NO_DRAGON_REVIEW.md  MOB_125_ENGINE_LAYER_NO_DRAGON_REVIEW.md  MOB_125_EXACT_SYSTEMS_NO_DRAGON_REVIEW.md  MOB_125_FULL_CONTINUE_PASS_REVIEW.md  MOB_125_PERF_FIX_REVIEW.md  MOB_125_PORT_REVIEW.md  MOB_NORMAL_STABILITY_PORT_PASS.md  MOB_PORT_DRAGON_CRYSTALS_PARTS_REVIEW.md  MOB_PORT_DRAGON_RECENTHIT_REVIEW.md  MOB_PORT_SPAWNERS_SILVERFISH_REVIEW.md  MOB_STRICT_PARITY_CONTINUE_REVIEW.md  MODEL_125_AUDIT_REVIEW.md  NORMAL_MOBS_PORT_V3_SPAWNER_EQUIPMENT_LOOTING.md  NORMAL_MOBS_STABILITY_PORT_V2_REVIEW.md  RELEASE_SOUND_DOWNLOADER_REVIEW.md  WASM_BUILD.md  hptibine_branding_cleanup_v8_3.md  hptibine_quality_parity_v8_3.md  java125_items_blocks_remaining_after_patch.md  linux_opengl_mesh_shutdown_fix.md  quit_after_world_freeze_root_cause.md  save_and_quit_full_world_teardown.md  save_and_quit_mesh_worker_fix.md  save_and_quit_progress_teardown.md  stivufine_branding_cleanup_v8_4.md  stivufine_quality_parity_v8_4.md  stivufine_quality_v10.md  stivufine_v9_1_parity.md  streaming_ring_lighting_fix_v11.md  worldgen_125_migration_status.md  worldgen_migration_status.md
hptibine/langs/: cs_CZ.lang  de_DE.lang  en_GB.lang  en_US.lang  es_ES.lang  es_MX.lang  et_EE.lang  fr_CA.lang  fr_FR.lang  hu_HU.lang  it_it.lang  ja_JP.lang  ko_KR.lang  lb_LU.lang  pl_PL.lang  pt_br.lang  ro_RO.lang  ru_RU.lang  sv_SE.lang  uk_UA.lang  zh_CN.lang  zh_TW.lang
hptibine_custom_color_pngs/: README.txt
multiplayer/: README.md
multiplayer/mcpe/: README.md
src/: main.c  main_android.c  main_android_tv.c  main_lgwebos.c  main_psp.c  main_sdl2.c  main_wasm.c  main_wii.c  main_xbox_uwp.c
src/assets/: classic_pack_installer.c  classic_pack_installer_psp.c  classic_pack_installer_sdl2.c  legacy_asset_manager_shared.c  psp_embedded_classic_pack.c  psp_embedded_mcrw_assets.c  pxc_zip_extract.c  textures.c  xinput_hud_png.inc  xinput_hud_rgba.inc
src/audio/: sound.c
src/common/: common.h  net_protocol.h
src/game/: achievements.c  block_logic.c  dimension_logic.c  flat_world_inventory.c  ingame_logic.c  inventory.c  mobs.c  passive_mobs.c  world_session.c
src/i18n/: bundled_langs.inc  hptibine_lang.inc  language.c
src/platform/: filesystem.c  gamepad.c  input.c  loggy_window.c  multiplayer_client.c  psp_app.c  psp_compat.h  psp_filesystem.c  psp_java47_client.c  psp_multiplayer_stub.c  sdl2_app.c  sdl2_compat.h  sdl2_filesystem.c  sdl2_input.c  win32_app.c  win32_loggy_window.c
src/render/: backend_compat.c  conflict_model_data.h  d3d9_uwp_stub.h  gui_primitives.c  item_render.c  psp_gu_renderer.c  render_dispatch.c  renderer_backend.h  renderer_d3d11.c  renderer_d3d11_xbox.c  renderer_d3d9.c  shaders.c  world_view.c
src/save/: nbt_gzip_save.c
src/settings/: options.c
src/ui/: achievements_ui.c  gui.c  hud_pause_inventory_chat.c  screen_state_input.c  title_menus.c
src/worldgen/: beta_generator.c  level.c
stivufine/: template.natural.properties
tools/: bundle_langs.py  check_hptibine_quality_parity.py  check_stivufine_quality_parity.py  check_stivufine_v10_quality.py  check_stivufine_v9_1_parity.py  check_wasm_target.py  embed_xinput_hud.py  extract_lgwebos_icon.py  generate_build_info.bat  generate_build_info.py  prepare_psp_assets.py  prepare_wasm_assets.py  prepare_wii_assets.py  worldgen_125_compare_hashes.py  worldgen_125_dump.c
web/: wasm_shell.html
webos/: AresPackage.cmake  CMakeLists.txt  appinfo.json.in
(+175 files in other folders)
